изменяет первый слайд

--- a/source/index.html
+++ b/source/index.html
@@ -342,6 +342,79 @@
                     </div>
                   </div>
 
+                  <div class="tours__swiper-slide tours__swiper-slide--caucasus swiper-slide">
+                    <div class="tours__background">
+                      <div class="tours__overlay"></div>
+                      <picture>
+                        <source type="image/webp" media="(max-width: 767px)" srcset="./img/tours/elbrus-mobile.webp 1x, ./img/tours/elbrus-mobile@2x.webp 2x" width="320" height="416">
+                        <source type="image/webp" media="(max-width: 1023px)" srcset="./img/tours/elbrus-tablet.webp 1x, ./img/tours/elbrus-tablet@2x.webp 2x" width="330" height="416">
+                        <source type="image/webp" media="(max-width: 1199px)" srcset="./img/tours/elbrus-laptop.webp 1x, ./img/tours/elbrus-laptop@2x.webp 2x" width="458" height="416">
+                        <source type="image/webp" media="(min-width: 1200px)" srcset="./img/tours/elbrus-desktop.webp 1x, ./img/tours/elbrus-desktop@2x.webp 2x" width="380" height="416">
+                        <source media="(max-width: 767px)" type="image/jpeg" srcset="./img/tours/elbrus-mobile.jpg 1x, ./img/tours/elbrus-mobile@2x.jpg 2x" width="320" height="416">
+                        <source media="(max-width: 1023px)" type="image/jpeg" srcset="./img/tours/elbrus-tablet.jpg 1x, ./img/tours/elbrus-tablet@2x.jpg 2x" width="330" height="416">
+                        <source media="(max-width: 1199px)" type="image/jpeg" srcset="./img/tours/elbrus-laptop.jpg 1x, ./img/tours/elbrus-laptop@2x.jpg 2x" width="458" height="416">
+                        <img src="./img/tours/elbrus-desktop.jpg" srcset="./img/tours/elbrus-desktop@2x.jpg 2x" type="image/jpeg" alt="Вид на Эльбрус." width="380" height="416">
+                      </picture>
+                    </div>
+
+                    <div class="tours__info">
+                      <div class="tours__details-top">
+                        <div class="tours__place">
+                          <svg width="16" height="16" aria-hidden="true">
+                            <use href="./img/sprite.svg#tours-pin"></use>
+                          </svg>
+                          <p>Кавказ</p>
+                        </div>
+                        <div class="tours__duration-wrapper">
+                          <div class="tours__days">
+                            <svg width="20" height="20" aria-hidden="true">
+                              <use href="./img/sprite.svg#sun"></use>
+                            </svg>
+                            <p>4 дня</p>
+                          </div>
+                          <div class="tours__nights">
+                            <svg width="20" height="20" aria-hidden="true">
+                              <use href="./img/sprite.svg#moon"></use>
+                            </svg>
+                            <p>3 ночи</p>
+                          </div>
+                        </div>
+                      </div>
+                      <h3>Путешествие вокруг Эльбруса</h3>
+                      <div class="tours__line"></div>
+                      <ul class="tours__details">
+                        <li class="tours__complexity">
+                          <p>Сложность:</p>
+                          <span class="tours__star">
+                            <svg width="16" height="16" aria-hidden="true">
+                              <use href="./img/sprite.svg#star-filled"></use>
+                            </svg>
+                            <svg width="16" height="16" aria-hidden="true">
+                              <use href="./img/sprite.svg#star-filled"></use>
+                            </svg>
+                            <svg width="16" height="16" aria-hidden="true">
+                              <use href="./img/sprite.svg#star-filled"></use>
+                            </svg>
+                            <svg width="16" height="16" aria-hidden="true">
+                              <use href="./img/sprite.svg#star-filled"></use>
+                            </svg>
+                            <svg width="15" height="14" aria-hidden="true">
+                              <use href="./img/sprite.svg#star-empty"></use>
+                            </svg>
+                          </span>
+                        </li>
+                        <li class="tours__date">
+                          <p>Даты набора:</p>
+                          <span>12.06-19.06</span>
+                        </li>
+                        <li class="tours__group">
+                          <p>Группа:</p>
+                          <span>до 15 чел.</span>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+
                   <div class="tours__swiper-slide tours__swiper-slide--altai swiper-slide">
                     <div class="tours__background">
                       <div class="tours__overlay"></div>
@@ -486,79 +559,6 @@
                     </div>
                   </div>
 
-                  <div class="tours__swiper-slide tours__swiper-slide--caucasus swiper-slide">
-                    <div class="tours__background">
-                      <div class="tours__overlay"></div>
-                      <picture>
-                        <source type="image/webp" media="(max-width: 767px)" srcset="./img/tours/elbrus-mobile.webp 1x, ./img/tours/elbrus-mobile@2x.webp 2x" width="320" height="416">
-                        <source type="image/webp" media="(max-width: 1023px)" srcset="./img/tours/elbrus-tablet.webp 1x, ./img/tours/elbrus-tablet@2x.webp 2x" width="330" height="416">
-                        <source type="image/webp" media="(max-width: 1199px)" srcset="./img/tours/elbrus-laptop.webp 1x, ./img/tours/elbrus-laptop@2x.webp 2x" width="458" height="416">
-                        <source type="image/webp" media="(min-width: 1200px)" srcset="./img/tours/elbrus-desktop.webp 1x, ./img/tours/elbrus-desktop@2x.webp 2x" width="380" height="416">
-                        <source media="(max-width: 767px)" type="image/jpeg" srcset="./img/tours/elbrus-mobile.jpg 1x, ./img/tours/elbrus-mobile@2x.jpg 2x" width="320" height="416">
-                        <source media="(max-width: 1023px)" type="image/jpeg" srcset="./img/tours/elbrus-tablet.jpg 1x, ./img/tours/elbrus-tablet@2x.jpg 2x" width="330" height="416">
-                        <source media="(max-width: 1199px)" type="image/jpeg" srcset="./img/tours/elbrus-laptop.jpg 1x, ./img/tours/elbrus-laptop@2x.jpg 2x" width="458" height="416">
-                        <img src="./img/tours/elbrus-desktop.jpg" srcset="./img/tours/elbrus-desktop@2x.jpg 2x" type="image/jpeg" alt="Вид на Эльбрус." width="380" height="416">
-                      </picture>
-                    </div>
-
-                    <div class="tours__info">
-                      <div class="tours__details-top">
-                        <div class="tours__place">
-                          <svg width="16" height="16" aria-hidden="true">
-                            <use href="./img/sprite.svg#tours-pin"></use>
-                          </svg>
-                          <p>Кавказ</p>
-                        </div>
-                        <div class="tours__duration-wrapper">
-                          <div class="tours__days">
-                            <svg width="20" height="20" aria-hidden="true">
-                              <use href="./img/sprite.svg#sun"></use>
-                            </svg>
-                            <p>4 дня</p>
-                          </div>
-                          <div class="tours__nights">
-                            <svg width="20" height="20" aria-hidden="true">
-                              <use href="./img/sprite.svg#moon"></use>
-                            </svg>
-                            <p>3 ночи</p>
-                          </div>
-                        </div>
-                      </div>
-                      <h3>Путешествие вокруг Эльбруса</h3>
-                      <div class="tours__line"></div>
-                      <ul class="tours__details">
-                        <li class="tours__complexity">
-                          <p>Сложность:</p>
-                          <span class="tours__star">
-                            <svg width="16" height="16" aria-hidden="true">
-                              <use href="./img/sprite.svg#star-filled"></use>
-                            </svg>
-                            <svg width="16" height="16" aria-hidden="true">
-                              <use href="./img/sprite.svg#star-filled"></use>
-                            </svg>
-                            <svg width="16" height="16" aria-hidden="true">
-                              <use href="./img/sprite.svg#star-filled"></use>
-                            </svg>
-                            <svg width="16" height="16" aria-hidden="true">
-                              <use href="./img/sprite.svg#star-filled"></use>
-                            </svg>
-                            <svg width="15" height="14" aria-hidden="true">
-                              <use href="./img/sprite.svg#star-empty"></use>
-                            </svg>
-                          </span>
-                        </li>
-                        <li class="tours__date">
-                          <p>Даты набора:</p>
-                          <span>12.06-19.06</span>
-                        </li>
-                        <li class="tours__group">
-                          <p>Группа:</p>
-                          <span>до 15 чел.</span>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-
                 </div>
               </div>
               <a class="tours__show-all" href="#">
@@ -616,6 +616,36 @@
                   <!-- Additional required wrapper -->
                   <div class="education__swiper-wrapper swiper-wrapper">
                     <!-- Slides -->
+                    <div class="education__swiper-slide swiper-slide">
+                      <div class="education__img-wrapper">
+                        <picture>
+                          <source type="image/webp" media="(max-width: 767px)" srcset="./img/trainers/trainer-1-mobile.webp 1x, ./img/trainers/trainer-1-mobile@2x.webp 2x" width="290" height="200">
+                          <source type="image/webp" media="(max-width: 1023px)" srcset="./img/trainers/trainer-1-tablet.webp 1x, ./img/trainers/trainer-1-tablet@2x.webp 2x" width="183" height="200">
+                          <source type="image/webp" media="(max-width: 1199px)" srcset="./img/trainers/trainer-1-laptop.webp 1x, ./img/trainers/trainer-1-laptop@2x.webp 2x" width="268" height="200">
+                          <source type="image/webp" media="(min-width: 1200px)" srcset="./img/trainers/trainer-1-desktop.webp 1x, ./img/trainers/trainer-1-desktop@2x.webp 2x" width="255" height="200">
+                          <source media="(max-width: 767px)" type="image/jpeg" srcset="./img/trainers/trainer-1-mobile.jpg 1x, ./img/trainers/trainer-1-mobile@2x.jpg 2x" width="290" height="200">
+                          <source media="(max-width: 1023px)" type="image/jpeg" srcset="./img/trainers/trainer-1-tablet.jpg 1x, ./img/trainers/trainer-1-tablet@2x.jpg 2x" width="183" height="200">
+                          <source media="(max-width: 1199px)" type="image/jpeg" srcset="./img/trainers/trainer-1-laptop.jpg 1x, ./img/trainers/trainer-1-laptop@2x.jpg 2x" width="268" height="200">
+                          <img src="./img/trainers/trainer-1-desktop.jpg" srcset="./img/trainers/trainer-1-desktop@2x.jpg 2x" type="image/jpeg" width="255" height="200" alt="Тренер Александр Прокофьев.">
+                        </picture>
+                      </div>
+                      <div class="education__info">
+                        <div class="education__name-wrapper">
+                          <h4>Александр <br> Прокофьев</h4>
+                          <a class="education__trainer-page" href="#" aria-label="Страница тренера в ВК.">
+                            <svg width="14" height="8">
+                              <use href="./img/sprite.svg#vk-icon"></use>
+                            </svg>
+                          </a>
+                        </div>
+                        <p>
+                          Строгий и внимательный инструктор,
+                          весёлый и&nbsp;общительный человек.
+                          Любит природу.
+                        </p>
+                      </div>
+                    </div>
+
                     <div class="education__swiper-slide swiper-slide">
                       <div class="education__img-wrapper">
                         <picture>
@@ -735,36 +765,6 @@
                           с&nbsp;2001&nbsp;года. В России побывал в горных
                           районах Хибины, Архыз, много
                           путешествует по Европе.
-                        </p>
-                      </div>
-                    </div>
-
-                    <div class="education__swiper-slide swiper-slide">
-                      <div class="education__img-wrapper">
-                        <picture>
-                          <source type="image/webp" media="(max-width: 767px)" srcset="./img/trainers/trainer-1-mobile.webp 1x, ./img/trainers/trainer-1-mobile@2x.webp 2x" width="290" height="200">
-                          <source type="image/webp" media="(max-width: 1023px)" srcset="./img/trainers/trainer-1-tablet.webp 1x, ./img/trainers/trainer-1-tablet@2x.webp 2x" width="183" height="200">
-                          <source type="image/webp" media="(max-width: 1199px)" srcset="./img/trainers/trainer-1-laptop.webp 1x, ./img/trainers/trainer-1-laptop@2x.webp 2x" width="268" height="200">
-                          <source type="image/webp" media="(min-width: 1200px)" srcset="./img/trainers/trainer-1-desktop.webp 1x, ./img/trainers/trainer-1-desktop@2x.webp 2x" width="255" height="200">
-                          <source media="(max-width: 767px)" type="image/jpeg" srcset="./img/trainers/trainer-1-mobile.jpg 1x, ./img/trainers/trainer-1-mobile@2x.jpg 2x" width="290" height="200">
-                          <source media="(max-width: 1023px)" type="image/jpeg" srcset="./img/trainers/trainer-1-tablet.jpg 1x, ./img/trainers/trainer-1-tablet@2x.jpg 2x" width="183" height="200">
-                          <source media="(max-width: 1199px)" type="image/jpeg" srcset="./img/trainers/trainer-1-laptop.jpg 1x, ./img/trainers/trainer-1-laptop@2x.jpg 2x" width="268" height="200">
-                          <img src="./img/trainers/trainer-1-desktop.jpg" srcset="./img/trainers/trainer-1-desktop@2x.jpg 2x" type="image/jpeg" width="255" height="200" alt="Тренер Александр Прокофьев.">
-                        </picture>
-                      </div>
-                      <div class="education__info">
-                        <div class="education__name-wrapper">
-                          <h4>Александр <br> Прокофьев</h4>
-                          <a class="education__trainer-page" href="#" aria-label="Страница тренера в ВК.">
-                            <svg width="14" height="8">
-                              <use href="./img/sprite.svg#vk-icon"></use>
-                            </svg>
-                          </a>
-                        </div>
-                        <p>
-                          Строгий и внимательный инструктор,
-                          весёлый и общительный человек.
-                          Любит природу.
                         </p>
                       </div>
                     </div>
@@ -1211,9 +1211,9 @@
               </div>
               <div class="consultation-form__inner-wrapper">
                 <h2>Остались вопросы?</h2>
-                <p>Заполните форму и наш оператор свяжется с вами для консультации.</p>
+                <p>Заполните форму и наш оператор свяжется с&nbsp;вами для консультации.</p>
                 <div class="consultation-form__form form">
-                  <form action="https://echo.htmlacademy.ru/" method="get">
+                  <form action="https://echo.htmlacademy.ru/" method="post">
                     <div class="consultation-form__phone">
                       <label for="phone">
                         <input type="tel" name="phone" id="phone" placeholder="Телефон"
