--- a/source/index.html
+++ b/source/index.html
@@ -75,7 +75,7 @@
               <!-- Additional required wrapper -->
               <div class="hero__swiper-wrapper swiper-wrapper">
                 <!-- Slides -->
-                <div class="hero__swiper-slide hero__swiper-slide--caucasus swiper-slide">
+                <div class="hero__swiper-slide hero__swiper-slide--caucasus swiper-slide" tabindex="0">
                   <div class="hero__background">
                     <div class="hero__overlay"></div>
                     <picture>
@@ -136,7 +136,7 @@
                   </div>
                 </div>
 
-                <div class="hero__swiper-slide hero__swiper-slide--kamchatka swiper-slide">
+                <div class="hero__swiper-slide hero__swiper-slide--kamchatka swiper-slide" tabindex="0">
                   <div class="hero__background">
                     <div class="hero__overlay"></div>
                     <picture>
@@ -191,7 +191,7 @@
                   </div>
                 </div>
 
-                <div class="hero__swiper-slide hero__swiper-slide--altai swiper-slide">
+                <div class="hero__swiper-slide hero__swiper-slide--altai swiper-slide" tabindex="0">
                   <div class="hero__background">
                     <div class="hero__overlay"></div>
                     <picture>
@@ -269,7 +269,7 @@
                 <!-- Additional required wrapper -->
                 <div class="tours__swiper-wrapper swiper-wrapper">
                   <!-- Slides -->
-                  <div class="tours__swiper-slide tours__swiper-slide--caucasus swiper-slide">
+                  <div class="tours__swiper-slide tours__swiper-slide--caucasus swiper-slide" tabindex="0">
                     <div class="tours__background">
                       <div class="tours__overlay"></div>
                       <picture>
@@ -342,7 +342,7 @@
                     </div>
                   </div>
 
-                  <div class="tours__swiper-slide tours__swiper-slide--caucasus swiper-slide">
+                  <div class="tours__swiper-slide tours__swiper-slide--caucasus swiper-slide" tabindex="0">
                     <div class="tours__background">
                       <div class="tours__overlay"></div>
                       <picture>
@@ -415,7 +415,7 @@
                     </div>
                   </div>
 
-                  <div class="tours__swiper-slide tours__swiper-slide--altai swiper-slide">
+                  <div class="tours__swiper-slide tours__swiper-slide--altai swiper-slide" tabindex="0">
                     <div class="tours__background">
                       <div class="tours__overlay"></div>
                       <picture>
@@ -487,7 +487,7 @@
                     </div>
                   </div>
 
-                  <div class="tours__swiper-slide tours__swiper-slide--adygea swiper-slide">
+                  <div class="tours__swiper-slide tours__swiper-slide--adygea swiper-slide" tabindex="0">
                     <div class="tours__background">
                       <div class="tours__overlay"></div>
                       <picture>
@@ -616,7 +616,7 @@
                   <!-- Additional required wrapper -->
                   <div class="education__swiper-wrapper swiper-wrapper">
                     <!-- Slides -->
-                    <div class="education__swiper-slide swiper-slide">
+                    <div class="education__swiper-slide swiper-slide" tabindex="0">
                       <div class="education__img-wrapper">
                         <picture>
                           <source type="image/webp" media="(max-width: 767px)" srcset="./img/trainers/trainer-1-mobile.webp 1x, ./img/trainers/trainer-1-mobile@2x.webp 2x" width="290" height="200">
@@ -646,7 +646,7 @@
                       </div>
                     </div>
 
-                    <div class="education__swiper-slide swiper-slide">
+                    <div class="education__swiper-slide swiper-slide" tabindex="0">
                       <div class="education__img-wrapper">
                         <picture>
                           <source type="image/webp" media="(max-width: 767px)" srcset="./img/trainers/trainer-1-mobile.webp 1x, ./img/trainers/trainer-1-mobile@2x.webp 2x" width="290" height="200">
@@ -676,7 +676,7 @@
                       </div>
                     </div>
 
-                    <div class="education__swiper-slide swiper-slide">
+                    <div class="education__swiper-slide swiper-slide" tabindex="0">
                       <div class="education__img-wrapper">
                         <picture>
                           <source type="image/webp" media="(max-width: 767px)" srcset="./img/trainers/trainer-2-mobile.webp 1x, ./img/trainers/trainer-2-mobile@2x.webp 2x" width="290" height="200">
@@ -707,7 +707,7 @@
                       </div>
                     </div>
 
-                    <div class="education__swiper-slide swiper-slide">
+                    <div class="education__swiper-slide swiper-slide" tabindex="0">
                       <div class="education__img-wrapper">
                         <picture>
                           <source type="image/webp" media="(max-width: 767px)" srcset="./img/trainers/trainer-3-mobile.webp 1x, ./img/trainers/trainer-3-mobile@2x.webp 2x" width="290" height="200">
@@ -738,7 +738,7 @@
                       </div>
                     </div>
 
-                    <div class="education__swiper-slide swiper-slide">
+                    <div class="education__swiper-slide swiper-slide" tabindex="0">
                       <div class="education__img-wrapper">
                         <picture>
                           <source type="image/webp" media="(max-width: 767px)" srcset="./img/trainers/trainer-4-mobile.webp 1x, ./img/trainers/trainer-4-mobile@2x.webp 2x" width="290" height="200">
@@ -879,7 +879,7 @@
                 <!-- Additional required wrapper -->
                 <div class="reviews__swiper-wrapper swiper-wrapper">
                   <!-- Slides -->
-                  <div class="reviews__swiper-slide swiper-slide">
+                  <div class="reviews__swiper-slide swiper-slide" tabindex="0">
                     <div class="reviews__img-wrapper">
                       <picture>
                         <source type="image/webp" media="(max-width: 767px)" srcset="./img/reviews/reviews-img-1-mobile.webp 1x, ./img/reviews/reviews-img-1-mobile@2x.webp 2x" width="280" height="169">
@@ -909,7 +909,7 @@
                     </div>
                   </div>
 
-                  <div class="reviews__swiper-slide swiper-slide">
+                  <div class="reviews__swiper-slide swiper-slide" tabindex="0">
                     <div class="reviews__img-wrapper">
                       <picture>
                         <source type="image/webp" media="(max-width: 767px)" srcset="./img/reviews/reviews-img-2-mobile.webp 1x, ./img/reviews/reviews-img-2-mobile@2x.webp 2x" width="280" height="169">
@@ -936,7 +936,7 @@
                     </div>
                   </div>
 
-                  <div class="reviews__swiper-slide swiper-slide">
+                  <div class="reviews__swiper-slide swiper-slide" tabindex="0">
                     <div class="reviews__img-wrapper">
                       <picture>
                         <source type="image/webp" media="(max-width: 767px)" srcset="./img/reviews/reviews-img-3-mobile.webp 1x, ./img/reviews/reviews-img-3-mobile@2x.webp 2x" width="280" height="169">
@@ -964,7 +964,7 @@
                     </div>
                   </div>
 
-                  <div class="reviews__swiper-slide swiper-slide">
+                  <div class="reviews__swiper-slide swiper-slide" tabindex="0">
                     <div class="reviews__img-wrapper">
                       <picture>
                         <source type="image/webp" media="(max-width: 767px)" srcset="./img/reviews/reviews-img-4-mobile.webp 1x, ./img/reviews/reviews-img-4-mobile@2x.webp 2x" width="280" height="169">
@@ -1009,7 +1009,7 @@
               <!-- Additional required wrapper -->
               <ul class="advantages__swiper-wrapper swiper-wrapper">
                 <!-- Slides -->
-                <li class="advantages__swiper-slide swiper-slide">
+                <li class="advantages__swiper-slide swiper-slide" tabindex="0">
                   <div class="advantages__icon">
                     <svg width="24" height="24" aria-hidden="true">
                       <use href="./img/sprite.svg#icon-shield"></use>
@@ -1020,7 +1020,7 @@
                     <p>Уделяем внимание безопасности клиентов, внедряя строгие процедуры и&nbsp;протоколы безопасности. Имеем планы действий на&nbsp;случай непредвиденных обстоятельств и&nbsp;даем гарантию полной безопасности во&nbsp;время всего тура.</p>
                   </div>
                 </li>
-                <li class="advantages__swiper-slide swiper-slide">
+                <li class="advantages__swiper-slide swiper-slide" tabindex="0">
                   <div class="advantages__icon">
                     <svg width="24" height="24" aria-hidden="true">
                       <use href="./img/sprite.svg#icon-crown"></use>
@@ -1031,7 +1031,7 @@
                     <p>Наша команда опытных гидов имеет обширные знания о&nbsp;местности, погодных условиях и&nbsp;технике безопасности. Это гарантирует, что наши клиенты находятся в&nbsp;надежных руках и&nbsp;могут в&nbsp;полной мере насладиться опытом без опасений.</p>
                   </div>
                 </li>
-                <li class="advantages__swiper-slide swiper-slide">
+                <li class="advantages__swiper-slide swiper-slide" tabindex="0">
                   <div class="advantages__icon advantages__icon--boots">
                     <svg width="24" height="24" aria-hidden="true">
                       <use href="./img/sprite.svg#icon-boots"></use>
@@ -1042,7 +1042,7 @@
                     <p>Мы&nbsp;предоставляем клиентам все необходимое оборудование, необходимое для путешествия. Это избавляет клиентов от&nbsp;необходимости покупать, брать с&nbsp;собой снаряжение, что делает путешествие более удобным и&nbsp;экономически выгодным.</p>
                   </div>
                 </li>
-                <li class="advantages__swiper-slide swiper-slide">
+                <li class="advantages__swiper-slide swiper-slide" tabindex="0">
                   <div class="advantages__icon">
                     <svg width="24" height="24" aria-hidden="true">
                       <use href="./img/sprite.svg#icon-path"></use>
@@ -1053,7 +1053,7 @@
                     <p>Предлагает широкий выбор туров, отвечающих различным уровням мастерства и&nbsp;интересам. Мы&nbsp;также можем адаптировать маршруты к&nbsp;вашим конкретным потребностям и&nbsp;предпочтениям, чтобы вы&nbsp;получили индивидуальный опыт.</p>
                   </div>
                 </li>
-                <li class="advantages__swiper-slide swiper-slide">
+                <li class="advantages__swiper-slide swiper-slide" tabindex="0">
                   <div class="advantages__icon">
                     <svg width="24" height="24" aria-hidden="true">
                       <use href="./img/sprite.svg#icon-leaf"></use>
@@ -1133,14 +1133,14 @@
               <!-- Additional required wrapper -->
               <div class="gallery__swiper-wrapper swiper-wrapper">
                 <!-- Slides -->
-                <div class="gallery__swiper-slide swiper-slide">
+                <div class="gallery__swiper-slide swiper-slide" tabindex="0">
                   <picture>
                     <source type="image/webp" srcset="img/gallery/gallery-1.webp 1x, img/gallery/gallery-1@2x.webp 2x" width="275" height="449">
                     <img src="img/gallery/gallery-1.jpg" srcset="img/gallery/gallery-1@2x.jpg 2x" type="image/jpeg" alt="Путешественник на краю вершины." width="275" height="449">
                   </picture>
                 </div>
 
-                <div class="gallery__swiper-slide swiper-slide">
+                <div class="gallery__swiper-slide swiper-slide" tabindex="0">
                   <picture>
                     <source type="image/webp" srcset="img/gallery/gallery-2.webp 1x, img/gallery/gallery-2@2x.webp 2x" width="298" height="179">
                     <img src="img/gallery/gallery-2.jpg" srcset="img/gallery/gallery-2@2x.jpg 2x" type="image/jpeg" alt="Туристы у костра." width="298" height="179">
@@ -1151,14 +1151,14 @@
                   </picture>
                 </div>
 
-                <div class="gallery__swiper-slide swiper-slide">
+                <div class="gallery__swiper-slide swiper-slide" tabindex="0">
                   <picture>
                     <source type="image/webp" srcset="img/gallery/gallery-4.webp 1x, img/gallery/gallery-4@2x.webp 2x" width="272" height="449">
                     <img src="img/gallery/gallery-4.jpg" srcset="img/gallery/gallery-4@2x.jpg 2x" type="image/jpeg" alt="Горный туризм." width="272" height="449">
                   </picture>
                 </div>
 
-                <div class="gallery__swiper-slide swiper-slide">
+                <div class="gallery__swiper-slide swiper-slide" tabindex="0">
                   <picture>
                     <source type="image/webp" srcset="img/gallery/gallery-5.webp 1x, img/gallery/gallery-5@2x.webp 2x" width="298" height="179">
                     <img src="img/gallery/gallery-5.jpg" srcset="img/gallery/gallery-5@2x.jpg 2x" type="image/jpeg" alt="Зимний туризм." width="298" height="179">
@@ -1169,14 +1169,14 @@
                   </picture>
                 </div>
 
-                <div class="gallery__swiper-slide swiper-slide">
+                <div class="gallery__swiper-slide swiper-slide" tabindex="0">
                   <picture>
                     <source type="image/webp" srcset="img/gallery/gallery-7.webp 1x, img/gallery/gallery-7@2x.webp 2x" width="276" height="449">
                     <img src="img/gallery/gallery-7.jpg" srcset="img/gallery/gallery-7@2x.jpg 2x" type="image/jpeg" alt="Туристы у костра" width="276" height="449">
                   </picture>
                 </div>
 
-                <div class="gallery__swiper-slide swiper-slide">
+                <div class="gallery__swiper-slide swiper-slide" tabindex="0">
                   <picture>
                     <source type="image/webp" srcset="img/gallery/gallery-2.webp 1x, img/gallery/gallery-2@2x.webp 2x" width="298" height="179">
                     <img src="img/gallery/gallery-2.jpg" srcset="img/gallery/gallery-2@2x.jpg 2x" type="image/jpeg" alt="Туристы у костра." width="298" height="179">
@@ -1249,21 +1249,21 @@
                 </p>
                 <ul class="contacts__list">
                   <li class="contacts__item">
-                    <svg width="26" height="26" aria-hidden="true">
+                    <svg width="26" height="26">
                       <use href="./img/sprite.svg#phone"></use>
                     </svg>
                     <h3>Телефон</h3>
                     <a class="contacts__link-phone" href="tel:89837454545">+7 983 745-45-45</a>
                   </li>
                   <li class="contacts__item">
-                    <svg width="26" height="26" aria-hidden="true">
+                    <svg width="26" height="26">
                       <use href="./img/sprite.svg#mail"></use>
                     </svg>
                     <h3>Email</h3>
                     <a class="contacts__link-email" href="mailto:info@lifetour.com">info@lifetour.com</a>
                   </li>
                   <li class="contacts__item">
-                    <svg width="26" height="26" aria-hidden="true">
+                    <svg width="26" height="26">
                       <use href="./img/sprite.svg#pin"></use>
                     </svg>
                     <h3>Адрес</h3>
